fix: Adjust the size of the title-name for more readability

--- a/styles/index.css
+++ b/styles/index.css
@@ -292,6 +292,7 @@ li {
         align-self: center;
         margin-left: 0.5em;
         font-weight: 300;
+        font-size: 1.8rem;
     }
 
     .navbar-toggler {
